--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,177 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap");
+
+:root {
+  --priamry-font: "DM Sans", sans-serif;
+  --soft-red: hsl(10, 79%, 65%);
+  --cyan: hsl(186, 34%, 60%);
+  --dark-brown: hsl(25, 47%, 15%);
+  --medium-brown: hsl(28, 10%, 53%);
+  --cream: hsl(27, 66%, 92%);
+  --very-pale-orange: hsl(33, 100%, 98%);
+  --white: hsl(0, 0%, 100%);
+}
+
+/* General Styles */
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  background: var(--cream);
+  font-family: var(--priamry-font);
+  font-size: 1.8rem;
+}
+
+span {
+  display: block;
+  text-align: right;
+}
+
+.visually-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+/* Main */
+
+.main {
+  width: min(91.46667%, 343px);
+  margin: 6.7rem auto;
+}
+
+.header {
+  background: var(--soft-red);
+  border-radius: 10px;
+  padding: 2rem 2rem 2.2rem;
+  color: var(--white);
+  position: relative;
+}
+
+.header::after {
+  content: "";
+  width: 60px;
+  height: 40px;
+  background-image: url("../images/logo.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: absolute;
+  top: 2.8rem;
+  right: 2.4rem;
+}
+
+.main-heading {
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.total-balance {
+  font-weight: 700;
+  font-size: 2.4rem;
+  line-height: 3.1rem;
+  margin-top: 0.4rem;
+}
+
+.chart {
+  background: var(--very-pale-orange);
+  border-radius: 10px;
+  margin-top: 1.6rem;
+  padding: 2.4rem 2rem;
+}
+
+.chart-title {
+  font-weight: 700;
+  font-size: 2.4rem;
+  line-height: 3.1rem;
+  color: var(--dark-brown);
+}
+
+.grid {
+  margin: 5.2rem auto 2.4rem;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  align-items: end;
+  gap: 1.2rem;
+}
+
+.bar-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1.1rem;
+}
+
+.bar {
+  background: var(--soft-red);
+  border-radius: 3px;
+}
+
+.bar.current-day {
+  background: var(--cyan);
+}
+
+.label {
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+  text-align: center;
+  color: var(--medium-brown);
+}
+
+.summary {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding-top: 2.4rem;
+  position: relative;
+}
+
+.summary::before {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background: var(--cream);
+  border-radius: 1px;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.caption {
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  color: var(--medium-brown);
+}
+
+.month-total {
+  font-weight: 700;
+  font-size: 3rem;
+  line-height: 3.9rem;
+  color: var(--dark-brown);
+  margin-top: 0.4rem;
+}
+
+.percentage {
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  color: var(--dark-brown);
+}
+
 /* Attribution */
 
 .attribution {
