--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@
   --cream: hsl(27, 66%, 92%);
   --very-pale-orange: hsl(33, 100%, 98%);
   --white: hsl(0, 0%, 100%);
+  --blue: hsl(228, 45%, 44%);
+  --blue-hover: hsla(186, 49%, 80%, 1);
+  --red-hover: hsla(10, 100%, 76%, 1);
 }
 
 /* General Styles */
@@ -48,7 +51,7 @@ span {
 /* Main */
 
 .main {
-  width: min(91.46667%, 343px);
+  width: 91.46667%;
   margin: 6.7rem auto;
 }
 
@@ -179,5 +182,120 @@ span {
   text-align: center;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--blue);
+}
+
+/* Media Queries */
+@media (min-width: 600px) {
+  /* Main */
+
+  .main {
+    width: min(91.46667%, 540px);
+    margin: 18.2rem auto;
+  }
+
+  .header {
+    border-radius: 20px;
+    padding: 2.7rem 3.2rem 3.8rem;
+  }
+
+  .header::after {
+    width: 72px;
+    height: 48px;
+    top: 3.9rem;
+    right: 3.9rem;
+  }
+
+  .main-heading {
+    font-size: 1.8rem;
+    line-height: 2.3rem;
+  }
+
+  .total-balance {
+    font-size: 3.2rem;
+    line-height: 4.2rem;
+    margin-top: 0.8rem;
+  }
+
+  .chart {
+    border-radius: 20px;
+    margin-top: 2.4rem;
+    padding: 3.2rem 3.95rem 4rem 4rem;
+  }
+
+  .chart-title {
+    font-size: 3.2rem;
+    line-height: 4.2rem;
+  }
+
+  .grid {
+    margin: 6.6rem auto 3.2rem;
+    justify-content: space-between;
+    gap: 1.2rem;
+  }
+
+  .bar-wrapper {
+    width: 5rem;
+    gap: 0.8rem;
+  }
+
+  .bar {
+    border-radius: 5px;
+    position: relative;
+  }
+
+  .tooltip {
+    visibility: hidden;
+    font-weight: 700;
+    font-size: 1.8rem;
+    line-height: 2.3rem;
+    color: var(--very-pale-orange);
+    background: var(--dark-brown);
+    border-radius: 5px;
+    padding: 0.9rem 0.9rem 0.8rem 0.8rem;
+    width: 7.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: -4.8rem;
+    z-index: 1;
+  }
+
+  .bar:hover {
+    background: var(--red-hover);
+  }
+
+  .bar.current-day:hover {
+    background: var(--blue-hover);
+  }
+
+  .bar:hover .tooltip {
+    visibility: visible;
+  }
+
+  .label {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .summary {
+    padding-top: 3.2rem;
+  }
+
+  .caption {
+    font-size: 1.8rem;
+    line-height: 2.3rem;
+  }
+
+  .month-total {
+    font-size: 4.8rem;
+    line-height: 6.2rem;
+    margin-top: 0.1rem;
+  }
+
+  .percentage {
+    font-size: 1.8rem;
+    line-height: 2.3rem;
+  }
 }
