--- a/css/style.css
+++ b/css/style.css
@@ -189,12 +189,14 @@ span {
   background: var(--dark-brown);
   border-radius: 5px;
   padding: 0.9rem 0.9rem 0.8rem 0.8rem;
-  width: 7.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 7.5rem;
   position: absolute;
   top: -4.8rem;
+  left: -100%;
+  transform: translateX(50%);
   z-index: 1;
 }
 
